--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
+<h1>This is a Heading</h1>
+<p>Test.</p>
+
+<h1> is a Heading</h1>
+<p> is a paragraph.</p>
+
+<h1>This iHeading</h1>
+<p>This is a .</p>
+
 </body>
 </html>
